240829 FaceType 화면 작업 중

--- a/src/main/resources/templates/faceType/result.html
+++ b/src/main/resources/templates/faceType/result.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classification Result</title>
+    <title>분류 결과</title>
+    <link href="/css/base/styles.css" rel="stylesheet">
 </head>
 <body>
-<h1>Classification Result</h1>
-<div id="result"></div>
-<a href="/faceType/upload">Upload another image</a>
+<div class="app">
+    <header class="app-header home">
+        <input type="checkbox" id="menuicon">
+        <label for="menuicon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <div class="sidebar"></div>
+        <a href="/main" class="logo">
+            <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
+        </a>
+        <a class="mypage">
+            <img src="/img/mypage.png" alt="My Page" width="40px" height="40px">
+        </a>
+    </header>
+    <div class="content" layout:fragment="content">
+        <h1>분류 결과</h1>
+        <div id="result"></div>
+        <a href="/faceType/upload">다른 이미지 업로드</a>
+        <a href="/main">홈으로</a>
+    </div>
+</div>
 
 <script>
-    // 세션 스토리지에서 결과 가져오기
     const result = sessionStorage.getItem('classificationResult');
 
     if (result) {
         document.getElementById('result').innerHTML = `<p>${result}</p>`;
-        // 결과를 한 번 표시한 후 세션 스토리지에서 제거
         sessionStorage.removeItem('classificationResult');
     } else {
-        document.getElementById('result').innerHTML = `<p>No result available.</p>`;
+        document.getElementById('result').innerHTML = `<p>결과를 확인할 수 없습니다.</p>`;
     }
 </script>
 </body>
