--- a/src/main/resources/templates/faceType/upload.html
+++ b/src/main/resources/templates/faceType/upload.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Upload</title>
+    <title>이미지 업로드</title>
+    <link href="/css/base/styles.css" rel="stylesheet">
 </head>
 <body>
-<h1>Upload Your Image</h1>
-<form id="uploadForm">
-    <input type="file" id="image" name="image" accept="image/*" required>
-    <button type="submit">Upload and Classify</button>
-</form>
+<div class="app">
+    <header class="app-header home">
+        <input type="checkbox" id="menuicon">
+        <label for="menuicon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <div class="sidebar"></div>
+        <a href="/main" class="logo">
+            <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
+        </a>
+        <a class="mypage">
+            <img src="/img/mypage.png" alt="My Page" width="40px" height="40px">
+        </a>
+    </header>
+    <div class="content" layout:fragment="content">
+        <h1>이미지를 업로드하세요</h1>
+        <form id="uploadForm">
+            <input type="file" id="image" name="image" accept="image/*" required>
+            <button type="submit">업로드 및 분류</button>
+        </form>
+    </div>
+</div>
 
 <script>
     document.getElementById('uploadForm').addEventListener('submit', function(event) {
@@ -33,7 +53,6 @@
                 return response.text();
             })
             .then(data => {
-                // 결과를 세션 스토리지에 저장하고 결과 페이지로 이동
                 sessionStorage.setItem('classificationResult', data);
                 window.location.href = '/faceType/result';
             })
