240829 FaceType 화면 작업 중2

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <title>재미보따리</title>
-        <meta name="description" content="방구석에서 시작하는 &#39;나&#39;연구소! 연애능력 테스트, 아이돌 포지션 테스트, 고인물 테스트">
+
         <link rel="shortcut icon" href="./favicon.ico" />
         <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32">
         <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96">
-        <link rel="image_src" href="https://cdn.banggooso.com/assets/images/common/ogimg.jpg">
+
         <link href="/css/base/styles.css" rel="stylesheet">
 
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -43,6 +43,8 @@
                 </div>
             </div>
         </header>
+
+<!--        사이드바-->
         <div id="menu-t" style="display: none;"></div>
         <div id="menu">
             <div class="profile-top">
@@ -84,7 +86,11 @@
                     <a href="#" class="btn-share naver-share" onclick="goBanner('https://blog.naver.com/banggooso_official');setPlatformGtag('블로그', 'sidetab', 'SNS 버튼');" aria-label="share-naver"></a>
                 </div>
             </div>
-        </div>  <main class="app-main">
+        </div>
+<!--        사이드바 끝-->
+
+<!--        메인화면-->
+        <main class="app-main">
         <div class="home-feed">
             <div class="main-character-wrapper">
                 <div class="text-wrapper">
@@ -101,7 +107,7 @@
                             <div class="swiper-slide">
                                 <div class="slide-box">
                                     <div class="thum_icon new">NEW</div>
-                                    <a href="/intro.html?idx=223" class="link" onclick="setPlatformGtag('추천 - 다함께 강강술래', 'main', '메인 추천 버튼');" aria-label="recommendation-tab">
+                                    <a href="/faceType/upload" class="link" onclick="setPlatformGtag('추천 - 다함께 강강술래', 'main', '메인 추천 버튼');" aria-label="recommendation-tab">
                                         <div class="img-box" style="background-image:url('https://cdn.banggooso.com/assets/images/uploadImg/1724073538(1).png')"></div>
                                     </a>
                                 </div>
@@ -212,6 +218,8 @@
                         </div>
                     </a>
                 </li>
+<!--                메인화면 끝-->
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.banggooso.com/assets/js/clipboard.min.js"></script>
@@ -264,7 +272,6 @@
                             }
                         });
                     });
-
                 </script>
 
             </ul>
