--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -27,7 +27,7 @@
                                                 [[${dto.noticeName}]]
                                           </a>
                                     </td>
-                                    <td th:text="${dto.getFormattedDate()}"></td>
+<!--                                    <td th:text="${dto.date()}"></td>-->
                               </tr>
                               </tbody>
                         </table>
@@ -37,5 +37,3 @@
 </div>
 </body>
 </html>
-
-
