메인화면 다시 만듦

--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -27,7 +27,7 @@
                                                 [[${dto.noticeName}]]
                                           </a>
                                     </td>
-                                    <td th:text="${dto.getFormattedDate()}"></td>
+                                    <td th:text="${dto.getDate()}"></td>
                               </tr>
                               </tbody>
                         </table>
