--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -17,12 +17,33 @@
           <span></span>
           <span></span>
         </label>
-        <div class="sidebar"></div>
-        <a href="/main" class="logo">
+        <div class="sidebar">
+          <div id="menu">
+            <div class="profile">
+              <div>
+                <a class="login" href="/login">로그인이 필요합니다.</a>
+                <img src="/img/mainlogo.png" width="100px" height="100px" style="margin-top: 15px">
+              </div>
+            </div>
+            <ul class="list">
+              <li class="notice">
+                <a href="/notice/list">
+                  공지사항
+                </a>
+              </li>
+              <li class="game">
+                <a href="createGame/create">
+                  게임 만들기
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <a href="/main2" class="logo">
           <img src="/img/mainlogo2.png" alt="Main Logo" width="40px" height="40px">
         </a>
-        <a class="mypage">
-          <img src="/img/mypage.png" alt="My Page" width="40px" height="40px">
+        <a href="/search" class="mypage">
+          <img src="/img/search.png" alt="My Page" width="40px" height="40px">
         </a>
       </header>
       <div layout:fragment="content"></div>
