--- a/src/main/resources/templates/faceType/result.html
+++ b/src/main/resources/templates/faceType/result.html
@@ -7,7 +7,7 @@
     <link href="/css/base/styles.css" rel="stylesheet">
 </head>
 <body>
-<div class="app">
+<div class="app" data-app style="height: 788px">
     <header class="app-header home">
         <input type="checkbox" id="menuicon">
         <label for="menuicon">
