--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,7 +14,7 @@
     재미보따리에 온 걸 환영해!
   </div>
     <div class="rectangle-container">
-        <a href="link_to_large_box.html" class="large-rectangle">
+        <a href="/faceType/upload" class="large-rectangle">
             동물상 테스트
         </a>
         <div class="small-rectangle-container">
