--- a/src/main/resources/templates/game/result.html
+++ b/src/main/resources/templates/game/result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/static/css/result.css">
+    <link rel="stylesheet" href="/css/result.css">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
 
 <header>
     <div class="logo">
-    <img src="/static/image/mainlogo2.png" >
+    <img src="/image/mainlogo2.png" >
     </div>
     <button>앱으로 보기</button>
 </header>
