--- a/src/main/resources/templates/users/main.html
+++ b/src/main/resources/templates/users/main.html
@@ -23,12 +23,12 @@
         <script src="/assets/js/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.4.0/dist/lazyload.min.js"></script>
         <script type="text/javascript" charset="UTF-8" src="//t1.daumcdn.net/kas/static/kp.js"></script>
-        <script>
-            kakaoPixel('6894544435604599766').pageView();
-            kakaoPixel('6894544435604599766').search({
-                keyword: ''
-            });
-        </script>
+<!--        <script>-->
+<!--            kakaoPixel('6894544435604599766').pageView();-->
+<!--            kakaoPixel('6894544435604599766').search({-->
+<!--                keyword: ''-->
+<!--            });-->
+<!--        </script>-->
     </head>
     <body class="ko-KR">
     <div class="app index" data-app>
@@ -240,36 +240,7 @@
             },
         });
 
-        $(document).ready(function() {
-            // 로그인 상태에 따라 메뉴 항목의 표시/숨김 조정
-            let isLoggedIn = false; // 로그인 상태를 확인할 방법에 따라 이 값을 동적으로 설정
 
-            if (isLoggedIn) {
-                $('.login-item').hide();
-                $('.logout-item').show();
-            } else {
-                $('.login-item').show();
-                $('.logout-item').hide();
-            }
-
-            // 로그아웃 버튼 클릭 이벤트 처리
-            $('#logout-btn').on('click', function(event) {
-                event.preventDefault();
-                $.ajax({
-                    url: '/api/members/logout',
-                    method: 'POST',
-                    success: function(response) {
-                        // 로그아웃 성공 시
-                        alert('로그아웃 되었습니다.');
-                        location.reload(); // 페이지 새로고침
-                    },
-                    error: function(xhr, status, error) {
-                        // 로그아웃 실패 시
-                        alert('로그아웃에 실패했습니다. 다시 시도해 주세요.');
-                    }
-                });
-            });
-        });
     </script>
                 <script>
                     document.addEventListener("DOMContentLoaded", function() {
