--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -17,7 +17,7 @@
     </header>
 
     <main class="app-main" id="step1">
-        <form action="/users/new" method="post" enctype="multipart/form-data">
+        <form action="/users/register" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label class="form-label">아이디</label>
                 <div class="controls">
