240902 드디어 김민수(로그인, 회원가입) 했음

--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -21,7 +21,7 @@
           <div id="menu">
             <div class="profile">
               <div>
-                <a class="login" href="/login">로그인이 필요합니다.</a>
+                <a class="login" href="/member/login">로그인이 필요합니다.</a>
                 <img src="/img/mainlogo.png" width="100px" height="100px" style="margin-top: 15px">
               </div>
             </div>
