--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -18,7 +18,7 @@
 
   <main class="app-main">
     <h2> 로그인 </h2>
-    <form action="/users/login" method="post" class="form_w" id="loginForm">
+    <form action="/member/login" method="post" class="form_w" id="loginForm">
       <input type="text" id="memberId" name="username" class="login-input w-100 display-block" placeholder="아이디 입력" required autofocus>
       <input type="password" id="memberPw" name="password" class="login-input w-100 display-block" placeholder="비밀번호 입력" required>
       <div class="sign-in-actions">
@@ -93,7 +93,7 @@
     const signupButton = document.getElementById('signupButton2');
     if (signupButton) {
       signupButton.addEventListener('click', function() {
-        window.location.href = '/users/register'; // 올바른 회원가입 경로 설정
+        window.location.href = '/member/register'; // 올바른 회원가입 경로 설정
       });
     }
 
