--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -37,7 +37,7 @@
 </head>
 <body class="ko-KR"><div class="app search" data-app>
 <header class="app-header test_center">
-    <button type="button" class="app-header-btn back" onclick="backUp();" title="뒤로가기"></button>
+    <button type="button" class="app-header-btn back" onclick="history.go(-1);;" title="뒤로가기"></button>
     <h1 class="app-title">검색</h1>
 </header>
 <main class="app-main">
