--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -30,7 +30,9 @@
       <div class="sign-up-wrap text-center">
         <p class='sns-text'>SNS로 시작하기</p>
         <ul class="sns-sign-up">
-          <li><a href="#" onclick="loginWithKakao(); return false;" class="sns-button kakao">카카오 계정으로 로그인</a></li>
+          <li><a href="/oauth2/authorization/kakao" class="kakao-login">
+            <img th:src="@{/images/icons/sns-kakao.png}" alt="카카오 로그인 화면">
+          </a></li>
         </ul>
         <button type="button" class="btn email-log" id="signupButton2">회원가입</button>
         <span id="login-law">로그인(가입) 시 <a href="#">이용약관</a> 및 <a href="#">개인정보 취급방침</a>에 동의하는 것으로 간주합니다.</span>
