웹 최_최종입니다

--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -47,7 +47,7 @@
                 </a>
               </li>
               <li class="game">
-                <a href="createGame/create">
+                <a href="/createGame/create">
                   게임 만들기
                 </a>
               </li>
