--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>방구석연구소 - 검색</title>
+    <title>재미보따리 - 검색</title>
     <meta name="description" content="방구석에서 시작하는 &#39;나&#39;연구소! 연애능력 테스트, 아이돌 포지션 테스트, 고인물 테스트">
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16">
