--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -65,7 +65,7 @@
             <ul class="list">
 
               <li class="profile2" th:if="${isLoggedIn != null and isLoggedIn}">
-                <a href="#">나의 보따리</a>
+                <a href="/member/profile">나의 보따리</a>
               </li>
               <li class="notice">
                 <a href="/notice/list">
@@ -79,6 +79,11 @@
               </li>
               <li class="logout" th:if="${isLoggedIn != null and isLoggedIn}">
                 <a href="/member/logout">로그아웃</a>
+              </li>
+              <li class="logout" th:if="${isLoggedIn != null and isLoggedIn}">
+                <form action="/member/delete" method="post">
+                  <button type="submit" onclick="return confirm('정말로 회원탈퇴를 하시겠습니까?')">회원 탈퇴</button>
+                </form>
               </li>
               <li class="login" th:if="${isLoggedIn != null and !isLoggedIn}">
                 <a href="/member/login">로그인</a>
