--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -21,6 +21,9 @@
     <form action="/member/login" method="post" class="form_w" id="loginForm">
       <input type="text" id="memberId" name="username" class="login-input w-100 display-block" placeholder="아이디 입력" required autofocus>
       <input type="password" id="memberPw" name="password" class="login-input w-100 display-block" placeholder="비밀번호 입력" required>
+      <label>
+        <input type="checkbox" name="remember-me" /> Remember Me
+      </label>
       <div class="sign-in-actions">
         <div>
           <button class="btn yellow w-100" type="submit">로그인</button>
