--- a/src/main/resources/templates/quizResult.html
+++ b/src/main/resources/templates/quizResult.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>퀴즈가 끝났습니다!</h1>
-<p>총 맞춘 문제 수: {{totalCorrect}}개</p>
+<p>총 맞춘 문제 수: [[${totalCorrect}]]개</p>
 <a href="/quiz/list">다시 풀기</a>
 </body>
 </html>
