--- a/src/main/resources/templates/answerResult.html
+++ b/src/main/resources/templates/answerResult.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 <h1>퀴즈 결과</h1>
-{% if isCorrect %}
-<p>정답입니다!</p>
-{% else %}
-<p>오답입니다! 정답은 {{ correctAnswer }} 입니다.</p>
-{% endif %}
-<a href="/quiz/{{quizNo}}/start/{{quizQuestionNo + 1}}">다음 문제 풀기</a>
+<!-- 정답 여부를 조건에 따라 표시 -->
+<div th:if="${isCorrect}">
+  <p>정답입니다!</p>
+</div>
+<div th:if="${!isCorrect}">
+  <p>오답입니다! 정답은 [[${correctAnswer}]] 입니다.</p>
+</div>
+<!-- 다음 문제로 이동 -->
+<a th:href="@{'/quiz/' + ${quizNo} + '/start/' + (${quizQuestionNo + 1})}">다음 문제 풀기</a>
 </body>
 </html>
