질문, 답안이 안 나오는 오류 수정 중

--- a/src/main/resources/templates/game/list.html
+++ b/src/main/resources/templates/game/list.html
@@ -10,11 +10,11 @@
 <body>
 <div layout:fragment="content">
   <ul>
-  <li th:each="game : ${games}">
-    <a th:href="@{/games/{gameNo}(gameNo=${game.gameNo})}" th:text="${game.gameName}"></a>
-  </li>
-</ul>
-<a href="/game/create">Create a new game</a>
+    <li th:each="game : ${games}">
+      <a th:href="@{/game/{gameNo}(gameNo=${game.gameNo})}" th:text="${game.gameName}"></a>
+    </li>
+  </ul>
+  <a href="/game/create">Create a new game</a>
 </div>
 </body>
 </html>
