--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -18,11 +18,8 @@
             동물상 테스트
         </a>
         <div class="small-rectangle-container">
-            <a href="link_to_small_box1.html" class="small-rectangle">
-                다른 테스트
-            </a>
-            <a href="link_to_small_box2.html" class="small-rectangle">
-                다른 테스트
+            <a href="/game" class="small-rectangle">
+                테스트
             </a>
         </div>
         <a href="createGame/create" class="large-rectangle">테스트 만들기</a>
