--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -34,11 +34,11 @@
       <div class="sign-up-wrap text-center">
         <p class="sns-text">SNS로 시작하기</p>
         <ul class="sns-sign-up">
-          <li>
-            <a href="/oauth2/authorization/kakao" class="kakao-login">
-              <img src="/img/sns-kakao.png" alt="카카오 로그인 화면">
-            </a>
-          </li>
+<!--          <li>-->
+<!--            <a href="/oauth2/authorization/kakao" class="kakao-login">-->
+<!--              <img src="/img/sns-kakao.png" alt="카카오 로그인 화면">-->
+<!--            </a>-->
+<!--          </li>-->
         </ul>
         <button type="button" class="btn email-log" id="signupButton2">회원가입</button>
         <span id="login-law">
